--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "esp32_network_programming.c"
+idf_component_register(SRCS "esp32_network_programming.c" "gpio_control.c"
                     INCLUDE_DIRS ".")
